Show 100 latest tweets

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
               <option value="20">20</option>
               <option value="30">30</option>
               <option value="50">50</option>
+              <option value="100">100</option>
             </select>
           </div>
         </div>
@@ -84,7 +85,7 @@
         <span class="summary-model">gpt-5.2-codex</span>
       </div>
       <p class="summary-lead" data-summary-lead>
-        Fetch the 50 latest tweets and group them by topic.
+        Fetch the 100 latest tweets and group them by topic.
       </p>
       <div class="summary-list" data-summary-list></div>
       <div class="summary-status" data-summary-status></div>
