--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,12 @@
         <div class="panel-header">
           <h2>Latest tweets</h2>
           <div class="panel-controls">
+            <label class="sort-label" for="sourceSelect">Feed</label>
+            <select id="sourceSelect" class="sort-select" data-source>
+              <option value="list">CT (list)</option>
+              <option value="foryou">For you</option>
+              <option value="following">Following</option>
+            </select>
             <label class="sort-label" for="sortSelect">Sort</label>
             <select id="sortSelect" class="sort-select" data-sort>
               <option value="latest">Latest</option>
@@ -56,11 +62,7 @@
             </select>
             <label class="count-label" for="countSelect">Count</label>
             <select id="countSelect" class="sort-select" data-count>
-              <option value="5">5</option>
-              <option value="10">10</option>
-              <option value="20">20</option>
-              <option value="30">30</option>
-              <option value="50">50</option>
+              <option value="350">350</option>
               <option value="100">100</option>
             </select>
           </div>
@@ -84,9 +86,7 @@
         <span data-summary-updated>Waiting for summary</span>
         <span class="summary-model">gpt-5.2-codex</span>
       </div>
-      <p class="summary-lead" data-summary-lead>
-        Fetch the 100 latest tweets and group them by topic.
-      </p>
+      <p class="summary-lead" data-summary-lead></p>
       <div class="summary-list" data-summary-list></div>
       <div class="summary-status" data-summary-status></div>
     </aside>
@@ -122,14 +122,9 @@
       <div class="chat-backdrop" data-chat-close></div>
       <aside class="chat-panel" role="dialog" aria-modal="true" aria-label="Ask Codex about the feed">
         <div class="chat-header">
-          <div>
-            <div class="chat-kicker">Codex Q&A</div>
-            <h3>Ask about these tweets</h3>
-          </div>
           <button class="chat-close" type="button" aria-label="Close" data-chat-close>✕</button>
         </div>
         <div class="chat-body">
-          <label class="chat-label" for="chatInput">Question</label>
           <textarea
             id="chatInput"
             class="chat-input"
@@ -138,9 +133,7 @@
             data-chat-input
           ></textarea>
           <button class="chat-button" type="button" data-chat-ask>Ask Codex</button>
-          <div class="chat-answer" data-chat-answer>Waiting for your question.</div>
-          <div class="chat-status" data-chat-status></div>
-          <div class="chat-hint">Press Esc to close. Cmd+I to open.</div>
+          <div class="chat-answer" data-chat-answer></div>
         </div>
       </aside>
     </div>
