Update tweet count limit to 200, modify related UI elements, and implement fallback mechanism for tweet fetching.

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
             </select>
             <label class="count-label" for="countSelect">Count</label>
             <select id="countSelect" class="sort-select" data-count>
+              <option value="200">200</option>
               <option value="102">102</option>
             </select>
           </div>
